ÂEduardos changes its okÂ

--- a/BitteEspacios.html
+++ b/BitteEspacios.html
@@ -134,44 +134,44 @@
                         <div id="gallery-1" class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail">
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"></a> -->
+                                    <a href="./images/galeria/bitte_Galeria1b.jpg">
                                         <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="#">   -->
+                                    <a href="./images/galeria/bitte_Galeria2b.jpg">
                                         <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria3b.jpg">
                                         <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria4b.jpg">
                                         <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria5b.jpg">
                                         <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria6b.jpg">
                                         <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                         </div>
@@ -211,10 +211,10 @@
             <div class="page-header dtable text-center header-transparent pheader-portfolio">
                 <div class="dcell">
                     <div class="container">
-                        <h1 class="page-title">Espacios</h1>
+                        <h1 class="page-title">Espacios abiertos</h1>
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="Bitte_Ahome.html">Inicio</a></li>
-                            <li class="active">Espacios</li>
+                            <li class="active">Espacios abiertos</li>
                         </ul>    
                     </div>
                 </div>
@@ -329,13 +329,13 @@
                                                 <img src="./images/home/bitte_amenidades_5.jpg" alt="">
                                             </a>
                                             <div class="overlay">
-                                                <h5>Roof-top</h5>
+                                                <h5>Roof-Top y Alberca</h5>
                                                 <i class="ot-flaticon-add"></i>
                                             </div>
                                         </div>
                                         <div class="portfolio-info">
                                             <div class="portfolio-info-inner">
-                                                <h5><a class="title-link" href="#">Roof-top</a></h5>
+                                                <h5><a class="title-link" href="#">Roof-Top y Alberca</a></h5>
                                                 <!-- <p class="portfolio-cates"><a href="#">Furniture</a></p>  -->
                                             </div>
                                             <a class="overlay" href="#"></a>
