--- a/bitteDepaPH.html
+++ b/bitteDepaPH.html
@@ -130,52 +130,54 @@
                     <div class="ot-heading">
                         <h2 class="main-heading">Galería</h2>
                     </div>
-                    <div id="gallery-1" class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail">
-                        <figure class="gallery-item">
-                            <div class="gallery-icon landscape">
-                                <!-- <a href="./images/galeria/bitte_Galeria1.jpg"></a> -->
-                                    <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
-                                <!-- </a> -->
-                            </div>
-                        </figure>
-                        <figure class="gallery-item">
-                            <div class="gallery-icon landscape">
-                                <!-- <a href="#">   -->
-                                    <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
-                                <!-- </a> -->
-                            </div>
-                        </figure>
-                        <figure class="gallery-item">
-                            <div class="gallery-icon landscape">
-                                <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                    <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
-                                <!-- </a> -->
-                            </div>
-                        </figure>
-                        <figure class="gallery-item">
-                            <div class="gallery-icon landscape">
-                                <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
-                                    <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
-                                <!-- </a> -->
-                            </div>
-                        </figure>
-                        <figure class="gallery-item">
-                            <div class="gallery-icon landscape">
-                                <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
-                                    <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
-                                <!-- </a> -->
-                            </div>
-                        </figure>
-                        <figure class="gallery-item">
-                            <div class="gallery-icon landscape">
-                                <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
-                                    <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
-                                <!-- </a> -->
-                            </div>
-                        </figure>
+                    <div class="image-gallery">
+                        <div id="gallery-1" class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail">
+                            <figure class="gallery-item">
+                                <div class="gallery-icon landscape">
+                                    <a href="./images/galeria/bitte_Galeria1b.jpg">
+                                        <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
+                                    </a>
+                                </div>
+                            </figure>
+                            <figure class="gallery-item">
+                                <div class="gallery-icon landscape">
+                                    <a href="./images/galeria/bitte_Galeria2b.jpg">
+                                        <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
+                                    </a>
+                                </div>
+                            </figure>
+                            <figure class="gallery-item">
+                                <div class="gallery-icon landscape">
+                                    <a href="./images/galeria/bitte_Galeria3b.jpg">
+                                        <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
+                                    </a>
+                                </div>
+                            </figure>
+                            <figure class="gallery-item">
+                                <div class="gallery-icon landscape">
+                                    <a href="./images/galeria/bitte_Galeria4b.jpg">
+                                        <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
+                                    </a>
+                                </div>
+                            </figure>
+                            <figure class="gallery-item">
+                                <div class="gallery-icon landscape">
+                                    <a href="./images/galeria/bitte_Galeria5b.jpg">
+                                        <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
+                                    </a>
+                                </div>
+                            </figure>
+                            <figure class="gallery-item">
+                                <div class="gallery-icon landscape">
+                                    <a href="./images/galeria/bitte_Galeria6b.jpg">
+                                        <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
+                                    </a>
+                                </div>
+                            </figure>
+                        </div>
                     </div>
                     <div class="ot-heading ">
-                        <h2 class="main-heading">Contactanos</h2>
+                        <h2 class="main-heading">Contáctanos</h2>
                     </div>
                     <div class="side-panel-cinfo">
                         <ul class="panel-cinfo">
@@ -213,7 +215,7 @@
                         <ul id="breadcrumbs" class="breadcrumbs none-style">
                             <li><a href="Bitte_Ahome.html">Inicio</a></li>
                             <li><a href="./bitteDeptos.html">Departamentos</a></li>
-                            <li class="active">Penthouse</li>
+                            <li class="active">Penthouse 90 y 180 m<sup>2</sup>]</li>
                         </ul>    
                     </div>
                 </div>
@@ -353,7 +355,7 @@
                                         <a href="./bitteDepa90mts.html">
                                             <div class="thumb-post-next"><img src="./images/depto90/90.jpg" alt=""></div>
                                             <div class="info-post-next">
-                                                <h6><span class="title-link">Departamento m<sup>2</sup></span></h6>
+                                                <h6><span class="title-link">Departamento 90 m<sup>2</sup></span></h6>
                                                 <span>[ 90m<sup>2</sup> ]</span>
                                             </div>
                                         </a>
@@ -479,9 +481,9 @@
                         <div class="widget-footer widget-contact">
                             <h6>Enlaces rápidos</h6>
                             <ul>
-                                <li><a href="#">Acerca de Bitte</a></li>
-                                <li><a href="#">Departamentos</a></li>
-                                <li><a href="#">Contacto</a></li>
+                                <li><a href="Bitte_Ahome.html">Acerca de Bitte</a></li>
+                                <li><a href="bitteDeptos.html">Departamentos</a></li>
+                                <li><a href="bitteContacto.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
