--- a/bitteDeptos.html
+++ b/bitteDeptos.html
@@ -134,50 +134,50 @@
                         <div id="gallery-1" class="gallery galleryid-102 gallery-columns-3 gallery-size-thumbnail">
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"></a> -->
+                                    <a href="./images/galeria/bitte_Galeria1b.jpg">
                                         <img src="./images/galeria/bitte_Galeria1.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="#">   -->
+                                    <a href="./images/galeria/bitte_Galeria2b.jpg">
                                         <img src="./images/galeria/bitte_Galeria2.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria3b.jpg">
                                         <img src="./images/galeria/bitte_Galeria3.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria1.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria4b.jpg">
                                         <img src="./images/galeria/bitte_Galeria4.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria2.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria5b.jpg">
                                         <img src="./images/galeria/bitte_Galeria5.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                             <figure class="gallery-item">
                                 <div class="gallery-icon landscape">
-                                    <!-- <a href="./images/galeria/bitte_Galeria3.jpg"> -->
+                                    <a href="./images/galeria/bitte_Galeria6b.jpg">
                                         <img src="./images/galeria/bitte_Galeria6.jpg" class="" alt="">
-                                    <!-- </a> -->
+                                    </a>
                                 </div>
                             </figure>
                         </div>
                     </div>
                     <div class="ot-heading ">
-                        <h2 class="main-heading">Contact Info</h2>
+                        <h2 class="main-heading">Contáctanos</h2>
                     </div>
                     <div class="side-panel-cinfo">
                         <ul class="panel-cinfo">
@@ -208,7 +208,7 @@
         </div>
 
         <div id="content" class="site-content">
-            <div class="page-header dtable text-center header-transparent pheader-portfolio">
+            <div class="page-header dtable text-center header-transparent pheader-dept">
                 <div class="dcell">
                     <div class="container">
                         <h1 class="page-title">Estilo minimalista </h1>
@@ -470,9 +470,9 @@
                         <div class="widget-footer widget-contact">
                             <h6>Enlaces rápidos</h6>
                             <ul>
-                                <li><a href="#">Acerca de Bitte</a></li>
-                                <li><a href="#">Departamentos</a></li>
-                                <li><a href="#">Contacto</a></li>
+                                <li><a href="Bitte_Ahome.html">Acerca de Bitte</a></li>
+                                <li><a href="bitteDeptos.html">Departamentos</a></li>
+                                <li><a href="bitteContacto.html">Contacto</a></li>
                             </ul>
                         </div>
                     </div>
